--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,9 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
 	minecraft_version=1.20.4
 	yarn_mappings=1.20.4+build.3
-	loader_version=0.15.1
+	loader_version=0.15.3
 
 # Mod Properties
 	mod_version = 1.0
@@ -13,5 +11,6 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = john_mod
 
 # Dependencies
-	# check this on https://modmuss50.me/fabric.html
 	fabric_version=0.96.4+1.20.4
+	modmenu_version=9.0.0
+	clothconfig_version=13.0.121
